#682 : fix voor wrapping na form-steps

--- a/src/styles/components/_steps.scss
+++ b/src/styles/components/_steps.scss
@@ -16,4 +16,8 @@ $step-padding: 12px;
     font-weight: normal;
     padding-top: #{$step-padding / 2};
   }
+
+  + div {
+    clear: both;
+  }
 }
